# image_generator

./: .gitignore  README.md  build_my_project.sh  run.sh
data_base/: image.db
docker/: docker-compose.yaml
make_image/: __main__.py
read_dots/: CMakeLists.txt  main.cpp  vcpkg.json
read_dots/include/: CMakeLists.txt  PointInfo.cpp  PointInfo.h  read_file.cpp  read_file.h  sql_client.cpp  sql_client.h
